Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/failover/FailOver15.out
FailOver15.java:17:10: compiler.err.expected: ';'
FailOver15.java:11:13: compiler.err.cant.resolve.location: kindname.class, UnknownClass, , , (compiler.misc.location: kindname.class, Test, null)
2 errors
